--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=JobApp
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 server.port=8081
+spring.datasource.url=
+spring.datasource.username=avnadmin
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
